--- a/dessert-ordering-system/src/main/resources/static/include/navbar.html
+++ b/dessert-ordering-system/src/main/resources/static/include/navbar.html
@@ -1,1 +1,6 @@
-
+<div>
+  <a herf="index.html">HOME</a>
+  <a herf= "product.html">Product</a>
+  <a herf= "contact.html">Contact</a>
+  <a herf= "login.html">Login</a>
+</div>
